tests/checker/diagnostics/0149_adt_constructor_int_arg_mismatch_03.ml.infer.expected
File "0149_adt_constructor_int_arg_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0149_adt_constructor_int_arg_mismatch_03 is not a valid module name.

File "0149_adt_constructor_int_arg_mismatch_03.ml", line 2, characters 13-17:
2 | let _ = IntC true
                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
